[gd_scene load_steps=6 format=3 uid="uid://s4uxiifbera4"]

[ext_resource type="Script" uid="uid://bu66sq1nk0l15" path="res://Scripts/Components/progression_box.gd" id="1_8mo2n"]
[ext_resource type="Texture2D" uid="uid://brkvaqqc37hpf" path="res://Assets/UI/icons.png" id="1_epp7l"]
[ext_resource type="Theme" uid="uid://od14ccps1daj" path="res://Themes/descriptive_label.tres" id="2_mvqat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pr758"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_8mo2n"]
atlas = ExtResource("1_epp7l")
region = Rect2(150, 450, 150, 150)

[node name="progressionBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8mo2n")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_right = 250.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pr758")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="lblChallenger" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mvqat")
theme_override_font_sizes/font_size = 14
text = "Rank 1 Challeneger"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="picIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("AtlasTexture_8mo2n")
expand_mode = 1
stretch_mode = 5

[node name="ratioBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_mvqat")

[node name="lblWins" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ratioBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Wins: 3"
vertical_alignment = 1

[node name="lblLosses" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ratioBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Losses: 2"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
